--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@
 }
 
 .card{
-    width: 15rem;
     border: 1px solid black;
     margin: 0.5rem;
 }
@@ -38,5 +37,17 @@
 }
 
 .card__container{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+
+.card__image{
+    width: 100%;
+    height: 200px;
+}
+
+.res__image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
