grid changed to 4

--- a/index.css
+++ b/index.css
@@ -37,8 +37,9 @@
 }
 
 .card__container{
+    margin: 5rem;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(4,1fr);
 }
 
 .card__image{
